# review-agent

./: .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
examples/: example_review2csv.py
examples/crawl_agent/: apc_uk_reports.py  doe_us_reports.py  ferrari_models.py
examples/crawl_agent/crawl_UoN_moodle/: crawl_UoN_moodle.py  index.csv
examples/crawl_agent/dongchedi/: step1_brand_ids_to_car_ids.py  step2_car_id_to_tables.py  step3_post_process.py
examples/review_agent/: review2csv.py  review2csv_automotive.py  review2csv_literature.py
examples/scival/: .env.template  scival.py  scival_crawler.py  scival_plot.py
examples/transformer/: crawl_ferroxcube_datasheet.py  crawl_ferroxcube_material.py
src/crawl_agent/: __init__.py
src/review_agent/: __main__.py  __version__.py  ai_chat_response.py  ai_model.py  config.py  csv2md.py  extract_text.py  logger.py  review.py
